# luna

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.js
src-tauri/: Cargo.toml  luna.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  db.rs  fileaccess.rs  indexer.rs  main.rs  module.rs
src-tauri/src/api/: addfavoritefolder.rs  enterprotectionmode.rs  getdrivelist.rs  getfavoritefolder.rs  getfilelist.rs  geticons.rs  luna_settings_api.rs  mod.rs  openfile.rs  protection_api.rs  searchfiles.rs
src-tauri/src/api/getfilelist/: mod.rs
src-tauri/src/db/: favorite_folder_accessor.rs  favoritefolder.rs  luna_settings_accessor.rs
src-tauri/src/dto/: mod.rs
src-tauri/src/fileaccess/: associatedprogram.rs  drive.rs  file.rs  icon.rs  mod.rs
src-tauri/src/fileaccess/icon/: mod.rs
src-tauri/src/module/: crypto.rs  enc_metadata.rs  hash.rs  random_util.rs
src/basic-comp/: Button.svelte  ButtonGroup.svelte  IconButton.svelte  Input.svelte  ProgressBar.svelte
src/complex-comp/: Modal.svelte
src/logics/: driveinfo.ts  fileitem.ts  iconcache.ts  lunasettings.ts
src/routes/: +layout.svelte  +page.svelte  FileRightClickMenu.svelte  LeftItemList.svelte  ListView.svelte  ListViewItem.svelte  SettingsModal.svelte  TitleBar.svelte  TopMenu.svelte
src/routes/common/: ButtonGroup.svelte  HorizontalLine.svelte  IconButton.svelte  Input.svelte  SecureInput.svelte  ToggleButton.svelte
src/utils/: errorparser.ts  filesizeBeutifier.ts  htmlnode.ts
