[package]
name = "luna"
version = "1.0.0"
description = "a Rust based ordinary file explorer"
authors = ["relay955"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unmaximize", "window-maximize", "window-minimize", "window-unminimize", "window-hide", "window-start-dragging", "window-show", "window-close", "shell-open"] }
window-shadows = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
winapi = {version = "0.3.9", features = ["winuser", "shellapi", "wingdi", "winbase", "ntdef", "errhandlingapi", "winnt", "fileapi"] }
windows = { version = "0.57.0", features = ["Win32_System_Com", "Win32_UI_Shell"] }
async-process = "2.2.3"
widestring = "1.1.0"
image = "0.25.1"
base64 = "0.22.1"
once_cell = "1.19.0"
lazy_static = "1.4.0"
kernel32-sys = "0.2.2"
heed = "0.20.3"
tantivy = "0.22.0"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
